re PR c++/37016 (member function pointer failure with optimization)

PR c++/37016
        * tree-ssa.c (useless_type_conversion_p_1): Call langhook
        if TYPE_STRUCTURAL_EQUALITY_P is true for both types.

From-SVN: r138755